samples/_failures_safe/1761253512_0d7766_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e19dc029.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_e19dc029.c:158:39: error: missing terminating " character
  158 |         case TOKEN_IDENTIFIER: return "IDENTIFI
      |                                       ^~~~~~~~~
./samples/SAFE/__tmp_e19dc029.c:158:9: error: expected expression at end of input
  158 |         case TOKEN_IDENTIFIER: return "IDENTIFI
      |         ^~~~
./samples/SAFE/__tmp_e19dc029.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e19dc029.c:158:9: error: expected declaration or statement at end of input
